--- a/main.css
+++ b/main.css
@@ -13,7 +13,8 @@ div {
  border-top-color: #f00; 
 }
 #green {
-  border-top-color: 
-  
-  
-}
+  border-top-color:#00bc3f; 
+  }
+  #blue{
+    border-top-color: 
+  }
