--- a/main.css
+++ b/main.css
@@ -16,5 +16,8 @@ div {
   border-top-color:#00bc3f; 
   }
   #blue{
-    border-top-color: 
+    border-top-color: #06f;
+  }
+  #indigo{
+    border-top-color:;
   }
