--- a/main.css
+++ b/main.css
@@ -19,5 +19,8 @@ div {
     border-top-color: #06f;
   }
   #indigo{
-    border-top-color:;
+    border-top-color:#8a2be2;
+  }
+  #yellow{
+    border-top-color: 
   }
